--- a/train_configs/debug_model.toml
+++ b/train_configs/debug_model.toml
@@ -31,26 +31,26 @@ lr = 8e-4
 
 [training]
 batch_size = 8
-seq_len = 2048
+seq_len = 2_048
 warmup_steps = 2  # lr scheduler warm up, normally 20% of the train steps
 max_norm = 1.0  # grad norm clipping
-steps = 10
+steps = 100
 data_parallel_degree = -1
 tensor_parallel_degree = 1
 compile = false
-dataset = "c4_test"  # supported datasets: c4_test (2K), c4 (177M)
+dataset = "tiny_programs"  # supported datasets: c4_test (2K), c4 (177M)
 
 [experimental]
 pipeline_parallel_degree = 1
 enable_async_tensor_parallel = false
 
 [checkpoint]
-enable_checkpoint = false
+enable_checkpoint = true
 folder = "checkpoint"
 interval_type = "steps"
-interval = 5
+interval = 10
 model_weights_only = false
-export_dtype = "float32"
+export_dtype = "bfloat16"
 async_mode = "disabled"  # ["disabled", "async", "async_with_pinned_mem"]
 
 [activation_checkpoint]
