--- a/train_configs/debug_model.toml
+++ b/train_configs/debug_model.toml
@@ -34,7 +34,7 @@ batch_size = 8
 seq_len = 2_048
 warmup_steps = 2  # lr scheduler warm up, normally 20% of the train steps
 max_norm = 1.0  # grad norm clipping
-steps = 100
+steps = 500
 data_parallel_degree = -1
 tensor_parallel_degree = 1
 compile = false
@@ -48,8 +48,8 @@ enable_async_tensor_parallel = false
 enable_checkpoint = true
 folder = "checkpoint"
 interval_type = "steps"
-interval = 10
-model_weights_only = false
+interval = 100
+model_weights_only = true
 export_dtype = "bfloat16"
 async_mode = "disabled"  # ["disabled", "async", "async_with_pinned_mem"]
 
