--- a/train_configs/codellama_model_pretrained.toml
+++ b/train_configs/codellama_model_pretrained.toml
@@ -22,8 +22,7 @@ save_tb_folder = "tb"
 name = "llama3_pretrained"
 flavor = "debugmodel"
 norm_type = "rmsnorm"  # layernorm / np_layernorm / rmsnorm / compiled_rmsnorm / fused_rmsnorm
-# test tokenizer.model, for debug purpose only
-tokenizer_path = "./test/assets/test_tiktoken.model"
+tokenizer_path = "./test/assets/tokenizer.model"
 pretrained_embedding_path = "./test/assets/llama3_8b_pretrained_embedding.npy"
 
 [optimizer]
@@ -31,7 +30,7 @@ name = "AdamW"
 lr = 8e-4
 
 [training]
-batch_size = 8
+batch_size = 1
 seq_len = 2_048
 warmup_steps = 2  # lr scheduler warm up, normally 20% of the train steps
 max_norm = 1.0  # grad norm clipping
@@ -39,7 +38,7 @@ steps = 500
 data_parallel_degree = -1
 tensor_parallel_degree = 1
 compile = false
-dataset = "tiny_programs"  # supported datasets: c4_test (2K), c4 (177M)
+dataset = "c4_test"  # supported datasets: c4_test (2K), c4 (177M)
 
 [experimental]
 pipeline_parallel_degree = 1
@@ -47,7 +46,7 @@ enable_async_tensor_parallel = false
 
 [checkpoint]
 enable_checkpoint = true
-folder = "checkpoint"
+folder = "checkpoint_debug_pretrained"
 interval_type = "steps"
 interval = 100
 model_weights_only = true
