--- a/.ci/docker/requirements.txt
+++ b/.ci/docker/requirements.txt
@@ -1,4 +1,5 @@
 torch >= 2.3.0
+torcheval
 torchdata >= 0.8.0
 datasets >= 2.19.0
 tomli >= 1.1.0 ; python_version < "3.11"
@@ -7,3 +8,4 @@ sentencepiece
 tiktoken
 blobfile
 tabulate
+fastcore
