--- a/train_configs/codellama/codellama_model_base.toml
+++ b/train_configs/codellama/codellama_model_base.toml
@@ -19,26 +19,25 @@ enable_tensorboard = true
 save_tb_folder = "tb"
 
 [model]
-name = "llama3_pretrained"
-flavor = "debugmodel"
+name = "llama3"
+flavor = "500M"
 norm_type = "rmsnorm"  # layernorm / np_layernorm / rmsnorm / compiled_rmsnorm / fused_rmsnorm
 tokenizer_path = "./test/assets/tokenizer.model"
-pretrained_embedding_path = "./test/assets/llama3_8b_pretrained_embedding.npy"
 
 [optimizer]
 name = "AdamW"
-lr = 8e-4
+lr = 5e-4
 
 [training]
-batch_size = 1
-seq_len = 2_048
-warmup_steps = 2  # lr scheduler warm up, normally 20% of the train steps
+batch_size = 16
+seq_len = 512
+warmup_steps = 10_000  # lr scheduler warm up, normally 20% of the train steps
 max_norm = 1.0  # grad norm clipping
-steps = 500
+steps = 50_000
 data_parallel_degree = -1
 tensor_parallel_degree = 1
 compile = false
-dataset = "c4_test"  # supported datasets: c4_test (2K), c4 (177M)
+dataset = "tiny_stories"  # supported datasets: c4_test (2K), c4 (177M)
 
 [experimental]
 pipeline_parallel_degree = 1
@@ -46,13 +45,12 @@ enable_async_tensor_parallel = false
 
 [checkpoint]
 enable_checkpoint = true
-folder = "checkpoint_debug_pretrained"
+folder = "checkpoint_500M"
 interval_type = "steps"
 interval = 100
 model_weights_only = true
 export_dtype = "bfloat16"
 async_mode = "disabled"  # ["disabled", "async", "async_with_pinned_mem"]
-
 [activation_checkpoint]
 mode = 'selective'  # ['none', 'selective', 'full']
 selective_ac_option = '2'  # 'int' = ac every positive int layer or 'op', ac based on ops policy
