--- a/train_configs/codellama/codellama_model_pretrained.toml
+++ b/train_configs/codellama/codellama_model_pretrained.toml
@@ -6,38 +6,39 @@ description = "Code Llama 3 pretrained embeddings training"
 use_for_integration_test = true
 
 [profiling]
-enable_profiling = true
+enable_profiling = false
 save_traces_folder = "profile_trace"
 profile_freq = 10
 enable_memory_snapshot = false
 save_memory_snapshot_folder = "memory_snapshot"
 
 [metrics]
-log_freq = 1
+log_freq = 10
 enable_color_printing = true
 enable_tensorboard = true
 save_tb_folder = "tb"
 
 [model]
-name = "llama3"
-flavor = "500M"
+name = "llama3_pretrained"
+flavor = "debugmodel"
 norm_type = "rmsnorm"  # layernorm / np_layernorm / rmsnorm / compiled_rmsnorm / fused_rmsnorm
 tokenizer_path = "./test/assets/tokenizer.model"
+pretrained_embedding_path = "./test/assets/llama3_8b_pretrained_embedding.npy"
 
 [optimizer]
 name = "AdamW"
-lr = 8e-4
+lr = 5e-4
 
 [training]
-batch_size = 1
-seq_len = 2_048
-warmup_steps = 2  # lr scheduler warm up, normally 20% of the train steps
+batch_size = 16
+seq_len = 512
+warmup_steps = 10_000  # lr scheduler warm up, normally 20% of the train steps
 max_norm = 1.0  # grad norm clipping
-steps = 500
+steps = 50_000
 data_parallel_degree = -1
 tensor_parallel_degree = 1
 compile = false
-dataset = "c4_test"  # supported datasets: c4_test (2K), c4 (177M)
+dataset = "tiny_stories"  # supported datasets: c4_test (2K), c4 (177M)
 
 [experimental]
 pipeline_parallel_degree = 1
@@ -45,12 +46,13 @@ enable_async_tensor_parallel = false
 
 [checkpoint]
 enable_checkpoint = true
-folder = "checkpoint_500M"
+folder = "checkpoint_pretrained"
 interval_type = "steps"
-interval = 100
+interval = 1_000
 model_weights_only = true
 export_dtype = "bfloat16"
 async_mode = "disabled"  # ["disabled", "async", "async_with_pinned_mem"]
+
 [activation_checkpoint]
 mode = 'selective'  # ['none', 'selective', 'full']
 selective_ac_option = '2'  # 'int' = ac every positive int layer or 'op', ac based on ops policy
