Add latest changes

--- a/train_configs/codellama/codellama_model_base.toml
+++ b/train_configs/codellama/codellama_model_base.toml
@@ -6,14 +6,14 @@ description = "Code Llama 3 pretrained embeddings training"
 use_for_integration_test = true
 
 [profiling]
-enable_profiling = true
+enable_profiling = false
 save_traces_folder = "profile_trace"
 profile_freq = 10
 enable_memory_snapshot = false
 save_memory_snapshot_folder = "memory_snapshot"
 
 [metrics]
-log_freq = 1
+log_freq = 10
 enable_color_printing = true
 enable_tensorboard = true
 save_tb_folder = "tb"
@@ -31,9 +31,9 @@ lr = 5e-4
 [training]
 batch_size = 16
 seq_len = 512
-warmup_steps = 10_000  # lr scheduler warm up, normally 20% of the train steps
+warmup_steps = 1_000  # lr scheduler warm up, normally 20% of the train steps
 max_norm = 1.0  # grad norm clipping
-steps = 50_000
+steps = 5_000
 data_parallel_degree = -1
 tensor_parallel_degree = 1
 compile = false
@@ -45,14 +45,15 @@ enable_async_tensor_parallel = false
 
 [checkpoint]
 enable_checkpoint = true
-folder = "checkpoint_500M"
+folder = "checkpoint_base"
 interval_type = "steps"
-interval = 100
+interval = 1_000
 model_weights_only = true
 export_dtype = "bfloat16"
 async_mode = "disabled"  # ["disabled", "async", "async_with_pinned_mem"]
+
 [activation_checkpoint]
-mode = 'selective'  # ['none', 'selective', 'full']
+mode = 'full'  # ['none', 'selective', 'full']
 selective_ac_option = '2'  # 'int' = ac every positive int layer or 'op', ac based on ops policy
 
 [float8]
